# CompGeometry-lw

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
LW1/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp
LW1/files/: task1_1in.txt  task1_2in.txt  task1_3in.txt  task1_4in.txt  task2_1in.txt  task2_2in.txt
LW2/: CMakeLists.txt  main.cpp  tasks.cpp  tasks.hpp
LW2/files/: task1in.txt  task2_1in.txt  task2_2in.txt  task3in.txt
LW3/: CMakeLists.txt  README.md  demo.py  event_handlers.py  gui.py  main.py  requirements.txt  setup.py
LW3/module/: CMakeLists.txt  main.cpp  wrapper.cpp
LW4/: CMakeLists.txt  README.md  event_handlers.py  main.py  vars.py
LW5_6/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp
LW5_6/files/: task1_1in.txt  task1_2in.txt  task2_1in.txt
LW7/: CMakeLists.txt  event_handlers.py  main.py  requirements.txt  vars.py
LW7_8/: CMakeLists.txt
LW8/: CMakeLists.txt  graphics.cpp  graphics.hpp  main.cpp  pythagor.py  snowflake.py
LW8-py/: CMakeLists.txt  event_handlers.py  main.py
LW9/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp
LW9/files/: in_file1.txt
Template/: CMakeLists.txt
Template/python/: CMakeLists.txt
lib/gui/: event_handlers.py  events.py  gui.py  themes.py
lib/wrapper/: CMakeLists.txt  main.cpp  pyproject.toml  requirements.txt  setup.py  wrapper.cpp
